# CLI-ApplicationDemo-ByRust

./: README.md
grrs/: Cargo.toml  README.md
grrs/src/: main.rs
