[package]
name = "grrs"
version = "0.1.0"
edition = "2021"
authers = ["Henry stephen <HenryStephen@163.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = ""
repository = ""
keywords = ["cli", "search", "demo"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"